Fix collapsing for .content

--- a/GoIT/markup/lesson4/css/style.css
+++ b/GoIT/markup/lesson4/css/style.css
@@ -58,7 +58,7 @@ img {
 /*Navigation*/
 .nav {
 	position: relative;
-	z-index: 3;
+	z-index: 2;
 	border-bottom: 1px solid black;
 	border-top: 1px solid #cacbcb;
 	padding-left: 40px;
@@ -133,23 +133,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#373737', end
 	line-height: 24px;
 }
 .leftColumn {
-	width: 200px;
+	width: 20%;
 	float: left;
 	background: #edeef0;
 	padding-bottom: 20000px;
 	margin-bottom: -20000px;
 }
 .centerColumn {
-	width: 598px;
+	width: 60%;
 	float: left;
 	padding-bottom: 20000px;
 	margin-bottom: -20000px;
 	border-right: 1px solid #c7cacf;
 	border-left: 1px solid #c7cacf;
-	z-index: 2;
+	box-sizing: border-box;
 }
 .rightColumn {
-	width: 200px;
+	width: 20%;
 	float: left;
 	background: #edeef0;
 	padding-bottom: 20000px;
